...
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        demoLabel.text = String(localized: "demo_description")
        requestDataButton.setTitle(String(localized: "request_button"), for: .normal)
        requestDataButton.accessibilityIdentifier = "btnRequestData"
        
        showRequests()
        subscribeToViewModel()   
    }
    
    @IBAction func requestData(_ sender: Any) {
...
